<resources>
    <string name="app_name">DespensaControlada</string>
    <string name="NombreProducto">Nombre de Producto</string>
    <string name="CodigoBarra">Codigo de Barra</string>
    <string name="FechaCaducidad">Fecha de Caducidad</string>
    <string name="DescCamara">Icono para camara</string>
    <string name="BtnSegunda">Crear</string>
    <string name="BtnGuardar">Guardar</string>
    <string name="notiNaranja">Dias para notificacion Preventiva</string>
    <string name="notiRoja">Dias para notificacion Critica</string>
    <string name="Categoria">Categoria</string>
    <string name="NombreLote">Nombre de Lote</string>


</resources>